objects/ToggleAccount__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Token__c</fullName>
        <label>API Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_User_Profile_Name__c</fullName>
        <label>New User Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workspace_ID__c</fullName>
        <label>Workspace ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>ToggleAccount</label>
    <pluralLabel>ToggleAccounts</pluralLabel>
</CustomObject>